<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/txtViewBarcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewBarcode" />

            <TextView
                android:text="@string/txtViewDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewBarcodeDot" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTxtBarcode" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/txtViewLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewLat" />

            <TextView
                android:text="@string/txtViewDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewLatDot" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTxtLat" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/txtViewLon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewLon" />

            <TextView
                android:text="@string/txtViewDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewLonDot" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTxtLon" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/txtViewAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewAddress" />

            <TextView
                android:text="@string/txtViewDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewDot" />

        </TableRow>

    </TableLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editTxtAddress" />

    <Button
        android:text="@string/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave" />

</LinearLayout>